[package]
name = "day_24"
version = "0.1.0"
authors = ["Rutger Claes <rgc@rgc.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
im-rc = "15.0.0"
itertools = "0.10.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
pbr = "1.0.3"
lazy_static = "1.4.0"